--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p>Avg Sheckles Per Crop = <span class="price-highlight">15,000</span></p>
           <p>Trading Value = <span class="price-highlight">N/A</span></p>
         </div>
-        <img src="https://cdn.discordapp.com/attachments/1377305567646847087/1377305611909337188/1200.png?ex=68387b4e&is=683729ce&hm=0ab426ccd524832df1fe1f362a7a4e2d78387cad0f0b49b3cf7f39a0f6eefc73&" alt="Soul Fruit" class="card-image">
+        <img src="https://i.namu.wiki/i/RUH915RkzkdvSwZFL_I1ivdz1925dk0kfwEwD59GDSTi9J0BrWC8zN2-4SbPbMaHJooBNVxdhNACY6UvziUMiUTYAugBCWkL3CvTl6wQ_RLA5cbn34KLzQhvPnIWUxsJKhKHXZZ-eUmWtfr5iTj-islt74CEzpmRVjADNmb8Tu0.webp" class="card-image">
       </div>
     </div>
 
@@ -79,7 +79,7 @@
           <p>Avg Sheckles Per Crop = <span class="price-highlight">50,000</span></p>
           <p>Trading Value = <span class="price-highlight">N/A</span></p>
         </div>
-        <img src="https://cdn.discordapp.com/attachments/1377305567646847087/1377305849479041147/1200.png?ex=68387b87&is=68372a07&hm=45a3fdd5bcc31708a6c8689d8cb489d8d9d69869ffbd9fff51c36b6a915f52f7&" alt="Cursed Fruit" class="card-image">
+        <img src="https://i.namu.wiki/i/RUH915RkzkdvSwZFL_I1ilfkucSphx8ihpXOKrd80TbeoXhhObliyyrtRpWKD0ihtyHn8JUbhOc8a3szUydLS2ifM440eRLpbtiYkeEe6LMVWywrWrbq0t0IUsIpKNwVPxRxyA5xtW_AoFEltaqRcSuajm_5wDt_KKFEZNgr_H0.webp" alt="Cursed Fruit" class="card-image">
       </div>
     </div>
 
