--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
           <p>- Chance Of Mutating A Crop Voidtouched.</p>
           <p>- Duration: ~1 minute.</p>
         </div>
-        <img src="https://cdn.discordapp.com/attachments/995765286571614252/1378063239463829747/thunderstorm-98541_1280.png?ex=683b3ce7&is=6839eb67&hm=e70af5e343e41cb890bc25f80114932cc3a298f6e69429c80d006ac8f140f445&" alt="Jandel Storm" class="card-image">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/023/816/429/small_2x/black-hole-loop-animation-on-black-background-isolated-transparent-alpha-png.png" alt="Jandel Storm" class="card-image">
       </div>
     </div>
     
