--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     No results found.
   </p>
 
+  <div class="card">
+      <div class="card-content">
+        <div class="card-text">
+          <h2>Sunflower</h2>
+          <p>Avg Sheckles Per Crop = <span class="price-highlight">500,000</span></p>
+          <p>Trading Value For Seed = <span class="price-highlight">N/A</span></p>
+        </div>
+        <img src="" alt="Sunflower" class="card-image">
+      </div>
+    </div>
+  
   <div class="card-container">
     <div class="card">
       <div class="card-content">
